# egg-stats

./: .gitignore  Cargo.toml  README.md
egg-viz-client/: README.md  bun.lockb  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.json.bak
egg-viz-client/public/: index.html
egg-viz-client/src/: App.tsx  Axis.tsx  Chart.tsx  ChartControls.tsx  DataProcessing.ts  Fetch.ts  FileList.tsx  Grid.tsx  ServerContext.tsx  Sidebar.tsx  hooks.ts  hooks.tsx  index.css  index.tsx  useChartDimensions.ts  usePersistState.ts
egg-viz-client/src/routes/: reset.tsx
egg-viz-client/src/routes/app/: App.tsx  Axis.tsx  Chart.tsx  ChartControls.tsx  ChartOptions.tsx  DataProcessing.test.ts  DataProcessing.ts  Fetch.ts  FileList.tsx  Grid.tsx  Sidebar.tsx  colors.tsx  hooks.tsx  useChartDimensions.ts  usePersistState.ts
egg-viz-server/: Cargo.toml
egg-viz-server/src/: cli.rs  main.rs  watcher.rs  webfiles.rs
egg-viz-server/src/handlers/: available.rs  download.rs  mod.rs  ws.rs
examples/: simple.rs
src/: datum.rs  lib.rs  logging_scheduler.rs  recorders.rs
