[package]
name = "egg-stats"
version = "0.1.0"
edition = "2021"
description = "Generate and view statistics for egg e-graphs"
homepage = "https://github.com/sgpthomas/egg-stats"
repository = "https://github.com/sgpthomas/egg-stats"
readme = "README.md"
exclude = [
        "egg-viz-client/*"
]
license = "MIT"

[workspace]
members = [
    "egg-viz-server",
]

[dependencies]
egg = "0.9.5"
