[package]
name = "egg-viz"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.89"
argh = "0.1.12"
csv = "1.3.0"
futures = { version = "0.3.30" }
include_dir = "0.7.4"
itertools = "0.13.0"
notify = "6.1.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = { version = "0.1.16" }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
walkdir = "2.5.0"
warp = "0.3.7"
webbrowser = "1.0.2"
